--- a/_posts/0000-01-09-shub8703.md
+++ b/_posts/0000-01-09-shub8703.md
@@ -3,6 +3,8 @@ layout: slide
 title: "Shubhada's slide"
 ---
 
+Had to type anything here.
+
 ![humpday](https://cloud.githubusercontent.com/assets/16547949/25400910/10641d9e-29c2-11e7-80c8-5c38ea261b22.jpg)
 {: .center}
 
