--- a/_posts/0000-01-13-Lyuye.md
+++ b/_posts/0000-01-13-Lyuye.md
@@ -3,6 +3,8 @@ layout: slide
 title: "Lyuye's dog"
 ---
 
+make a change
+
 ![sad-puppy](https://cloud.githubusercontent.com/assets/16547949/25401096/b9e619ee-29c2-11e7-8ee3-74a301737d34.jpg)
 {: .center}
 
